[package]
name = "pixy2_rust"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"
description = "An unofficial port of TPixy2.h and Pixy2CCC.h to Rust."

[dependencies]
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
embedded-time = "0.12.1"
ufmt = "0.2.0"

[dev-dependencies]
panic-halt = "0.2.0"
embedded-hal-bus = "0.3.0"

[dev-dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
features = ["arduino-mega2560"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
